# IsoEx-windows-modified

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  VERSION
Apps/: CMakeLists.txt
Apps/emc/: emc.cc
Apps2/: CMakeLists.txt
Apps2/emc_poly/: emc_poly.cc
Docu/: isoex.docu
Extractors/: ExtendedMarchingCubesT.cc  ExtendedMarchingCubesT.hh  MarchingCubesT.cc
Grids/: Grid.hh  ImplicitGridT.hh  RegularGridT.hh  ScalarGridT.hh  VolumeImageT.cc  VolumeImageT.hh
Implicits/: Implicit.hh  ImplicitAnnulus.hh  ImplicitAxisParallelCube.hh  ImplicitCube.hh  ImplicitCylinder.hh  ImplicitDoublePlanes.hh  ImplicitOpenCylinder.hh  ImplicitSphere.hh  csg.hh
cmake/: ACGCommon.cmake  FindOpenMesh.cmake
